fixed double border on diff table header.

--- a/docroot/modules/iucn/iucn_assessment/css/row_paragraph_widget.css
+++ b/docroot/modules/iucn/iucn_assessment/css/row_paragraph_widget.css
@@ -426,4 +426,5 @@
     position: relative;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    margin-bottom: -1px;
 }
